--- a/dashboard/templates/options.html
+++ b/dashboard/templates/options.html
@@ -5,18 +5,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 {% endblock %}
 
-{% block page_header %}
-    <div class="d-flex justify-content-between align-items-center mb-3">
-        <h2>Worker Options</h2>
-        <div class="text-end">
-            <span class="badge text-bg-secondary fs-6">
-                Updated: <span id="last-updated">...</span>
-            </span>
-            <button id="theme-toggle" title="Change Theme" class="btn btn-outline-secondary ms-2">
-                <span class="mdi mdi-brightness-6"></span>
-            </button>
-        </div>
-    </div>
+{% block page_title %}
+    <h2>Worker Options</h2>
 {% endblock %}
 
 {% block content %}
