--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -49,7 +49,7 @@
         }
 
         body {
-            padding-bottom: 70px; /* Space for the footer */
+            /* padding-bottom: 70px; */ /* Space for the footer - REMOVED */
         }
 
         .footer {
@@ -89,6 +89,14 @@
                 <a href="https://github.com/m1ckyb/CluserEncode" target="_blank">Project on GitHub</a>
             </div>
             <div class="text-end">
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn" id="view-errors-btn" data-bs-toggle="modal" data-bs-target="#failuresModal">
+                        View Errors <span class="badge text-bg-light" id="fail-count-badge"></span>
+                    </button>
+                    <button type="button" class="btn btn-outline-danger" id="clear-errors-btn" title="Clear All Errors">
+                        &times;
+                    </button>
+                </div>
                 <span class="badge text-bg-secondary fs-6 me-2">
                     Updated: <span id="last-updated">...</span>
                 </span>
