--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -238,7 +238,7 @@
                     failCountBadge.classList.add('text-bg-light');
                 } else {
                     viewErrorsBtn.classList.add('btn-success');
-                    failCountBadge.classList.add('text-bg-dark');
+                    failCountBadge.classList.add('text-bg-light');
                 }
 
                 // Update DB error alert
