--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -23,6 +23,7 @@
         })();
     </script>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css">
     <style>
         html, body {
